<resources>
    <string name="app_name">Career Advance</string>
    <string name="app_play_store_link">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="not_connected">Not connected to Internet!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_recent_search">Recent Search</string>
    <string name="action_change_password">Change Password</string>
    <string name="title_job_search">Job Search</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_profile">Profile</string>
    <string name="title_job_for_you">Job for you</string>
    <string name="add_update_profile">Add/Update Profile</string>
    <string name="title_sign_in_sign_up">Sign In or Sign Up</string>
    <string name="title_sign_out">Sign Up</string>
    <string name="title_create_new_account">Create New Account</string>
    <string name="hint_job_title_keyword_company">Job title, Keyword, Company </string>
    <string name="search_carrier">Search Carrier</string>
    <string name="location">Location</string>
    <string name="hint_select_your_location">Enter your location</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="job_details">Job Details</string>
    <string name="job_Summary">Job Summary</string>
    <string name="functional_area">Functional Area</string>
    <string name="industry">Industry</string>
    <string name="company_name">Company Name</string>
    <string name="company_website">Company Website</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="vacancy">Vacancy</string>
    <string name="job_country">Job Country</string>
    <string name="role">Role</string>
    <string name="job_type">Job Type</string>
    <string name="educational_requirement">Educational Requirement</string>
    <string name="employer_details">Employer Details</string>
    <string name="hint_select_your_email">Enter your email</string>
    <string name="hint_please_enter_your_email">Enter your email</string>
    <string name="hint_please_enter_valid_email">Enter valid email</string>
    <string name="hint_select_your_password">Enter your password</string>
    <string name="hint_please_enter_your_password">Enter your password</string>
    <string name="hint_please_enter_your_old_password">Enter your old password</string>
    <string name="hint_please_enter_your_new_password">Enter your new password</string>
    <string name="hint_please_enter_your_conform_password">Enter your confirm password</string>
    <string name="hint_password_are_not_matching">Password are not matching</string>
    <string name="hint_select_your_first_name">Enter your Full Name</string>
    <string name="hint_select_your_last_name">Enter your Last Name</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="well_done_send_your_temporary_password_on_your_mail">Well done!Send your temporary password on your mail.</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="term_and_condition">Term &amp; conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="post_your_resume">Upload New Resume</string>
    <string name="change_county">Change Country</string>
    <string name="county">Country</string>
    <string name="settings">Settings</string>
    <string name="promote_this_app">Promote this App</string>
    <string name="send_to">Send TO</string>
    <string name="remind_me_later">Later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_app_name">Rate it</string>
    <string name="app_rate_text">If you enjoy using %1$s, Please take a moment to rate it. Thanks for your support!</string>
    <string name="error_dialog_error">Fail to connect !Please Check Internet Connection.</string>
    <string name="error_dialog_no_results">No results found. Try changing your criteria.</string>
    <string name="error_dialog_server_error">A problem occurred retrieving results. Please try again later.</string>
    <string name="error_dialog_error_unknown">An unknown error has occurred. Please try again.</string>
    <string name="error_message_network_to_connect">Fail to connect !Please Check Internet Connection</string>
    <string name="profile_resume_headline">Resume Headline:</string>
    <string name="profile_objective">Objective:</string>
    <string name="profile_experience">Experience:</string>
    <string name="profile_salary_expectation">Salary Expectation:</string>
    <string name="profile_location">Location:</string>
    <string name="profile_key_skills">Key Skills:</string>
    <string name="hint_objective">Objective*:</string>
    <string name="hint_Where_are_you_currently_located">Where are you currently located?*:</string>
    <string name="hint_province">Province*:</string>
    <string name="hint_address">Address*:</string>
    <string name="hint_home_down_city">Hometown/City*:</string>
    <string name="hint_postal_code">Postal Code*:</string>
    <string name="hint_contact_number">Contact Number*:</string>
    <string name="title_your_contact_information">Your Contact Information</string>
    <string name="title_continue">Continue</string>
    <string name="keywords">Keywords</string>
    <string name="your_current_employment_details">Your Current Employment Details</string>
    <string name="how_much_work_experience_do_you_have">How much work experience do you have?*:</string>
    <string name="annual_salary">Annual Salary *:</string>
    <string name="select_annual_salary">Select Annual Salary</string>
    <string name="what_are_you_key_skills">What are your Key Skills?*:</string>
    <string name="enter_a_headline_for_your_profile">Enter a Headline for your Profile*:</string>
    <string name="select_the_industry_and_functional_are_that_are_interest_in">Select the Industry and Functional Area that you are interested in?:</string>
    <string name="which_functional_area_do_you_work_in">Which Functional Area do you work in?*:</string>
    <string name="please_select_your_basic_education">Select your Basic Education*:</string>
    <string name="select_basic_education">Select Basic Education</string>
    <string name="please_select_your_master_education">Select your Master Education*:</string>
    <string name="select_master_education">Select Master Education</string>
    <string name="please_select_your_doctorate_education">Select your Doctorate Education*:</string>
    <string name="select_doctorate_education">Select Doctorate Education</string>
    <string name="enter_the_certificate_course_name">Enter the certificate course name*:</string>
    <string name="your_education_background">Your Education Background</string>
    <string name="upload_your_detail_resume">Upload your detailed resume</string>
    <string name="mailer_and_privacy_settings">Mailer and Privacy Settings</string>
    <string name="job_alerts">Job Alerts</string>
    <string name="important_notifications">Important Notifications</string>
    <string name="fast_forward_e_mails">FastForward E-Mails</string>
    <string name="fast_forward_call_sms">FastForward Calls/SMS</string>
    <string name="communication_from_clients">Communication from Clients(Voice/Calls/SMS)</string>
    <string name="other_promotions_offers">Other Promotions/ Special Offers</string>
    <string name="i_have_read_and_understood_and_agree">I have read and understood and agree. </string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="search_country_text">Country Item</string>
    <string name="search_province_text">Province Item</string>
    <string name="select">Select</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_salary">Select Salary</string>
    <string-array name="select_your_industry">
        <item>Select</item>
        <item>IT-Software/Software Services</item>
        <item>Accounting/Finance</item>
        <item>Fresher/Trainee</item>
        <item>Banking/Financial Services/Broking</item>
        <item>Banking/Financial Services/Broking</item>
        <item>Construction/Engineering/Cement/Metals</item>
        <item>Advertising/PR/MR/Events</item>
        <item>Agriculture/Dairy</item>
        <item>Animation</item>
        <item>Architecture/Interior Designing</item>
        <item>Auto/Auto Ancillary</item>
        <item>Aviation / Aerospace Firms</item>
        <item>BPO/ITES</item>
        <item>Brewery / Distillery</item>
        <item>Ceramics /Sanitary ware</item>
        <item>Chemicals/PetroChemical/Plastic/Rubber</item>
        <item>Consumer Durables</item>
        <item>Courier/Transportation/Freight</item>
        <item>Education/Teaching/Training</item>
        <item>Electricals / Switchgears</item>
        <item>Export/Import</item>
        <item>Facility Management</item>
        <item>Fertilizers/Pesticides</item>
        <item>FMCG/Foods/Beverage</item>
        <item>Food Processing</item>
        <item>Gems &amp; Jewellery</item>
        <item>Glass</item>
        <item>Heat Ventilation Air Conditioning</item>
        <item>Hotels/Restaurants/Airlines/Travel</item>
        <item>Industrial Products/Heavy Machinery</item>
        <item>Insurance</item>
        <item>IT-Hardware &amp; Networking</item>
        <item>KPO / Research /Analytics</item>
        <item>Legal</item>
        <item>Media/Dotcom/Entertainment</item>
        <item>Internet/Ecommerce</item>
        <item>Medical/Healthcare/Hospital</item>
        <item>Mining</item>
        <item>NGO/Social Services</item>
        <item>Office Equipment/Automation</item>
        <item>Oil and Gas/Power/Infrastructure/Energy</item>
        <item>Paper</item>
        <item>Pharma/Biotech/Clinical Research</item>
        <item>Printing/Packaging</item>
        <item>Publishing</item>
        <item>Real Estate/Property</item>
        <item>Recruitment</item>
        <item>Retail</item>
        <item>Security/Law Enforcement</item>
        <item>Semiconductors/Electronics</item>
        <item>Shipping/Marine</item>
        <item>Steel</item>
        <item>Strategy /Management Consulting Firms</item>
        <item>Telcom/ISP</item>
        <item>Textiles/Garments/Accessories</item>
        <item>Tyres</item>
        <item>Water Treatment / Waste Management</item>
        <item>Wellness/Fitness/Sports</item>
        <item>Other</item>
    </string-array>
    <string name="select_your_function_ares">Select Your Function Area</string>
    <string name="other">Other</string>
    <string name="enter_other_basic_education">Enter other education</string>
    <string name="title_applied_job">Applied Jobs</string>
    <string name="title_my_profile">My Profile</string>
    <string name="apply">Apply</string>
    <string name="applying">Applying , Please wait...</string>
    <string name="processing_wait">Processing , Please wait...</string>
    <string name="filter">Filter</string>
    <string name="sort_by_relevance">Sort by relevance</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="all_job_types">All job types</string>
    <string name="full_time">Full-time</string>
    <string name="part_time">Part-time</string>
    <string name="update">Update</string>
    <string name="fresher">Fresher</string>
    <string name="internship">Internship</string>
    <string name="walkin">Walk-In</string>
</resources>