<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:fillViewport="true" android:fitsSystemWindows="true"
tools:context=".SplashScreenActivity" app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="5dp" android:textColor="@color/dark_grey" android:textStyle="bold" android:text="@string/title_your_contact_information" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" android:background="@color/dark_grey"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="10dp" android:orientation="vertical">
       <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:hint="@string/hint_select_your_first_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone">

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:hint="@string/hint_select_your_last_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_select_your_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_objective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_objective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_objective" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textColor="@color/colorPrimary"
            android:text="@string/hint_Where_are_you_currently_located"/>
            <EditText
                android:id="@+id/edit_Where_are_you_currently_located"
                android:layout_width="match_parent"
                android:editable="false"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_18dp" android:paddingRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textColor="@color/colorPrimary"
            android:text="@string/hint_province"/>
        <EditText
                android:id="@+id/edit_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:editable="false"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:hint="@string/hint_province"  android:paddingRight="10dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"  android:paddingRight="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_home_down_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_home_down_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_home_down_city"  android:paddingRight="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_postal_code"  android:paddingRight="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_contact_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contact_number"  android:paddingRight="10dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</LinearLayout>
</ScrollView>

