<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:fitsSystemWindows="true" android:background="@color/background"
tools:context=".SplashScreenActivity" app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" android:gravity="center_horizontal" android:layout_margin="10dp">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="46dp" android:layout_margin="10dp" android:background="@drawable/ca_logo_2014"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_select_your_email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_select_your_password" android:inputType="textPassword" android:paddingRight="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="12dp"
        android:textColor="@color/light"
        android:text="@string/title_sign_in" android:background="@drawable/search_rectangle_btn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/ll_create_account" android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_user"
            android:textStyle="bold"
            android:paddingRight="1dp"
            android:id="@+id/text_new_user" />
        <TextView
            android:paddingLeft="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/text_create_account" />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:id="@+id/text_forget_password" />

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>

