<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/ca_logo_2014"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keywords"
            android:textColor="@color/colorPrimary" />

        <AutoCompleteTextView
            android:id="@+id/edit_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_job_title_keyword_company"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/location"
            android:textColor="@color/colorPrimary" />

        <AutoCompleteTextView
            android:id="@+id/edit_your_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_select_your_location"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/search_rectangle_btn"
            android:padding="12dp"
            android:text="@string/search_jobs"
            android:textColor="@color/light" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_perm_identity_white_36dp" />
</android.support.design.widget.CoordinatorLayout>

